--- a/public/ecommerce/html/register.html
+++ b/public/ecommerce/html/register.html
@@ -9,10 +9,10 @@
       <form class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
         <div class="mb-4">
           <div>
-            <label id="loading_label" class="text-white border-2 bg-blue-500 border-blue-500 px-10 py-3 mb-10 w-24 rounded-full invisible">
+            <label id="loading_label" class="text-white border-2 bg-blue-500 border-blue-500 px-10 py-1 mb-10 w-24 rounded-full invisible">
               Loading...
             </label>
-            <label id="error_label" class="text-white border-2 bg-red-500 border-red-500 p-3 mb-10 w-24 invisible">
+            <label id="error_label" class="text-white border-2 bg-red-500 border-red-500 px-10 py-1 mb-10 w-24 rounded-full mb-10 invisible">
             </label>
           </div>
           <div>            
