--- a/public/ecommerce/html/login.html
+++ b/public/ecommerce/html/login.html
@@ -11,7 +11,7 @@
           <label id="loading_label" class="text-white border-2 bg-blue-500 border-blue-500 px-10 py-3 mb-10 w-24 rounded-full invisible">
             Loading...
           </label>
-          <label id="error_label" class="text-white border-2 bg-red-500 border-red-500 p-3 mb-10 w-24 invisible">
+          <label id="error_label" class="text-white border-2 bg-red-500 border-red-500 px-10 py-3 mb-10 w-24 rounded-full mb-10 invisible">
           </label>
           <div>
             <label class="block text-gray-700 text-sm font-bold mb-2 mt-4">
