forgot password option

--- a/public/ecommerce/html/forgot.html
+++ b/public/ecommerce/html/forgot.html
@@ -2,7 +2,7 @@
   <div class="container w-full lg:flex justify-center">
     <div class="">
       <h3 class="mt-64 text-3xl p-3">
-        Log in Mucomm, the music e-commerce!
+        Insert your account email so we send you an email with the steps to get your password back!
       </h3>
     </div>
     <div class="w-full max-w-xsm mt-32">
@@ -26,38 +26,15 @@
             />
           </div>
         </div>
-        <div class="mb-6">
-          <div>
-            <label class="block text-gray-700 text-sm font-bold mb-2">
-              Password
-            </label>
-            <input            
-              class="input shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-              label="Password"
-              id="password"
-              type="password"
-              name="password"
-              placeholder="******************"      
-            />
-          </div>
-        </div>
         <div class="flex items-center justify-between">
           <button
             id="submit"
-            path="/sign_up/login"
+            path="/sign_up/forgot"
             class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
             type="button"
           >
-            Login
+            Send email
           </button>
-
-          <a            
-            href="/sign_up/forgot"
-            class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
-            type="button"
-          >
-            I Forgot My Password
-        </a>
         </div>
       </form>
       <p class="text-center text-gray-500 text-xs">
