--- a/public/ecommerce/html/get_back_password.html
+++ b/public/ecommerce/html/get_back_password.html
@@ -2,7 +2,7 @@
   <div class="container w-full lg:flex justify-center">
     <div class="">
       <h3 class="mt-64 text-3xl p-3">
-        Log in Mucomm, the music e-commerce!
+        Set your new password!
       </h3>
     </div>
     <div class="w-full max-w-xsm mt-32">
@@ -15,49 +15,26 @@
           </label>
           <div>
             <label class="block text-gray-700 text-sm font-bold mb-2 mt-4">
-              Email
-            </label>
-            <input
-              label="Email"
-              class="input shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-              placeholder="Email"
-              name="email"
-              type="text"          
-            />
-          </div>
-        </div>
-        <div class="mb-6">
-          <div>
-            <label class="block text-gray-700 text-sm font-bold mb-2">
               Password
             </label>
-            <input            
-              class="input shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+            <input
               label="Password"
-              id="password"
-              type="password"
+              class="input shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+              placeholder="**********"
               name="password"
-              placeholder="******************"      
+              type="password"          
             />
           </div>
         </div>
         <div class="flex items-center justify-between">
           <button
             id="submit"
-            path="/sign_up/login"
+            path="/sign_up/forgot/password"
             class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
             type="button"
           >
-            Login
+            Submit new password
           </button>
-
-          <a            
-            href="/sign_up/forgot"
-            class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
-            type="button"
-          >
-            I Forgot My Password
-        </a>
         </div>
       </form>
       <p class="text-center text-gray-500 text-xs">
