--- a/public/ecommerce/html/products_albums.html
+++ b/public/ecommerce/html/products_albums.html
@@ -3,6 +3,8 @@
    
       <div class="container mx-auto px-6">
           <input class="w-36 border rounded-md pl-10 pr-4 py-2 focus:border-blue-500 focus:outline-none focus:shadow-outline input" type="text" placeholder="Album name" name="name">
+          <input class="w-36 border rounded-md pl-10 pr-4 py-2 focus:border-blue-500 focus:outline-none focus:shadow-outline input" type="number" placeholder="Minimum Price" name="price_min">
+          <input class="w-36 border rounded-md pl-10 pr-4 py-2 focus:border-blue-500 focus:outline-none focus:shadow-outline input" type="number" placeholder="Maximum Price" name="price_max">
         <input class="w-36 border rounded-md pl-10 pr-4 py-2 focus:border-blue-500 focus:outline-none focus:shadow-outline input" type="text" placeholder="Artist name" name="artist">
         <input class="w-36 border rounded-md pl-10 pr-4 py-2 focus:border-blue-500 focus:outline-none focus:shadow-outline input" type="text" placeholder="Genre" name="genre">
         <select type="select" name="order_by" class="input">
