--- a/public/ecommerce/html/products_players.html
+++ b/public/ecommerce/html/products_players.html
@@ -5,7 +5,8 @@
         <input class="w-36 border rounded-md pl-10 pr-4 py-2 focus:border-blue-500 focus:outline-none focus:shadow-outline input" type="text" placeholder="Headset name" name="name">
         <input class="w-36 border rounded-md pl-10 pr-4 py-2 focus:border-blue-500 focus:outline-none focus:shadow-outline input" type="text" placeholder="Brand" name="brand">
       <input class="w-36 border rounded-md pl-10 pr-4 py-2 focus:border-blue-500 focus:outline-none focus:shadow-outline input" type="number" placeholder="Rpm" name="rpm">
-
+      <input class="w-36 border rounded-md pl-10 pr-4 py-2 focus:border-blue-500 focus:outline-none focus:shadow-outline input" type="number" placeholder="Minimum Price" name="price_min">
+      <input class="w-36 border rounded-md pl-10 pr-4 py-2 focus:border-blue-500 focus:outline-none focus:shadow-outline input" type="number" placeholder="Maximum Price" name="price_max">
       Bluetooth:
       <select type="select" name="bluetooth" class="input">
         <option value="1" >Yes</option>
